[package]
name = "coredv2"
version = "0.1.0"
edition = "2021"

[dependencies]
# Runtime
dotenv = "0.15"
tokio = {version ="1", features = ["rt-multi-thread"] }

# Public API
async-graphql = { version = "5.0", features = ["dynamic-schema"] }
async-graphql-poem = "5.0"
poem = "1.3"

# Storage
opendal = "0.30"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WASM
wasmer = { version = "2.3", features = ["llvm", "cranelift", "singlepass", "universal"] }
wasmer-wasi = "2.3"
