[package]
name = "riwaq-cli"
version = "0.1.1"
description = "wasm runtime OS for web server"
authors = ["Mohamed Dardouri <med@dardouri.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/mahd-dev/riwaq-cli.git"

[[bin]]
name = "riwaq"
path = "src/main.rs"

[dependencies]
# Runtime
dotenv = "0.15"
tokio = {version ="1", features = ["rt-multi-thread"] }
clap = { version = "4.3", features = ["derive"] }
notify-debouncer-full = "0.2.0"
toml = "0.7"

# Public API
async-graphql = { version = "5.0", features = ["dynamic-schema"] }
async-graphql-poem = "5.0"
poem = "1.3"

# Storage
opendal = "0.30"
databend-driver = "0.5.1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WASM
# wasmer = { version = "2.3", features = ["llvm", "cranelift", "singlepass", "universal"] }
wasmer = { version = "2.3", features = ["singlepass", "universal"] }
wasmer-wasi = "2.3"

# Data types
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

riwaq = "0.1.0"
riwaq-types = "0.1.0"
